# euler-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
problems/1/: CMakeLists.txt  main.cpp
problems/2/: main.cpp
problems/3/: main.cpp
problems/4/: main.cpp
problems/5/: main.cpp
problems/6/: CMakeLists.txt  main.cpp
problems/7/: CMakeLists.txt  main.cpp
problems/8/: main.cpp
shared_functions/: CMakeLists.txt  factors_generator.hpp  is_divisible_by.hpp  is_palindrome.hpp  is_prime.hpp  timer.hpp
